@@ -8,6 +8,8 @@ in the sources of this package and additionally can be obtained from Internet
 <https://www.gnu.org/licenses>.
 
 * [2019-] added data structure TMCG_Bigint
+* [2019-05-20] RFC4880: fixed wrong iterated KDF computation in S2KCompute()
+* [2019-05-20] RFC4880: changed interface of HashCompute()
 * [2019-05-15] RFC4880: added public member version to TMCG_OpenPGP_PKESK
 * [2019-05-11] tests/StiglicMPC: code cleanup and simplified MPC_CyclicShift()
 * [2019-05-08] RFC4880: added another shape of VerfifyData() for v5 signatures
